<resources>
    <string name="action_settings">Options</string>
    <string name="app_name">Hug!</string>
    <string name="app_title">Hug! :)</string>

    <string name="title_activity_hug">Welcome to Hug!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signup">Sign up!</string>
    <string name="login">Go hug!</string>
    <string name="find">Find hug!</string>

    <string name="title_activity_home">Home sweet home!</string>
    <string name="username">Set hug name!</string>
    <string name="hugs">0 hugs!</string>
    <string name="hug_me">Hug me!</string>

    <string name="title_activity_find">Find a hugger!</string>
    <string name="title_activity_profile">Check out hugger!</string>
    <string name="title_activity_hugs">Your hug collection!</string>
    <string name="title_activity_signup">Become a hugger!</string>

    <string name="signup_failed">Signup failed</string>
    <string name="signup_finish">Finish!</string>
    <string name="login_failed">Login failed</string>

    <string name="hello_world">Hello world!</string>

</resources>
