<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.samuel.hug.HomeActivity" >

    <TextView
        android:id="@+id/username_textview"
        android:text="@string/username"
        android:textSize="34sp"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/user_imageview"
        android:layout_below="@id/username_textview"
        android:scaleType="centerCrop"
        android:layout_width="233dp"
        android:layout_height="233dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/samowl"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/hugs_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_imageview"
        android:layout_marginTop="10dp"
        android:text="@string/hugs"
        android:textSize="34dp"
        android:gravity="center" />

    <Button
        android:id="@+id/find_button"
        android:background="@drawable/button_shape"
        android:layout_below="@id/hugs_textview"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/find"
        android:textColor="#0a274f" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/find_button" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/hug_me"
            android:textSize="21dp" />

        <Switch
            android:id="@+id/hug_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>
